Fixed APIs body
